--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/TemplateProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/TemplateProperties.mxml
@@ -2,13 +2,14 @@
 <ModalDialog 
 	xmlns="PowerPack.com.dialog.*" 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	width="500" height="360"
+	width="500" height="460"
 	title="{LanguageManager.sentences.properties}" 
 	creationComplete="onShow(event)" 
 	xmlns:controls="ExtendedAPI.com.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
+			import PowerPack.com.gen.structs.TemplateStruct;
 			import mx.events.CloseEvent;
 			import mx.utils.StringUtil;
 			import PowerPack.com.managers.ContextManager;
@@ -22,19 +23,18 @@
 				{
 					_dialog = new TemplateProperties();	
 					_dialog.open();
-					_dialog.addEventListener(CloseEvent.CLOSE, _dialog.onClose);
-					_dialog.show(OK | CANCEL, closeHandler, null, OK);		
+					_dialog.show(OK | CANCEL, closeHandler, null, OK);
 					
 					var defaultCaptions:Object = {
 						template_properties: "Template properties",
 						template_name: "Template name",
 						template_description: "Description",
 						template_picture: "Template picture",
-						template_remove_pic: "Remove picture",			
-						template_key: "Template key"	
+						template_remove_pic: "Remove picture",
+						template_key: "Template key"
 					};
 					
-					LanguageManager.setSentences(defaultCaptions);	
+					LanguageManager.setSentences(defaultCaptions);
 				}				
 				else 
 				{
@@ -45,8 +45,10 @@
 			}
 			
 			private function onShow(event:Event):void
-			{
-				if(ContextManager.instance.templates.getItemAt(0).picture)
+			{            	
+            	var tpl:TemplateStruct = ContextManager.instance.templates.getItemAt(0) as TemplateStruct; 
+				
+				if(tpl.picture || tpl.picturePath)
 				{
 					gridRemovePic.visible = true;
 					gridRemovePic.includeInLayout = true;
@@ -55,32 +57,54 @@
 				{
 					gridRemovePic.visible = false;
 					gridRemovePic.includeInLayout = false;
-				}	
+				}				
+            		
+        		txtName.text = tpl.name;
+				txtDesc.text = tpl.description;
+				picBrowse.text = tpl.picturePath;
+				txtKey.text = tpl.key;
 				
+				if(tpl.picturePath)
+				{
+					tplImg.source = tpl.picturePath; 
+
+					b64Img.visible = false; 
+					b64Img.includeInLayout = false; 
+
+					tplImg.visible = true; 
+					tplImg.includeInLayout = true; 
+				} 
+				else if(tpl.picture)
+				{
+					b64Img.source = tpl.picture;
+
+					tplImg.visible = false; 
+					tplImg.includeInLayout = false; 
+
+					b64Img.visible = true; 
+					b64Img.includeInLayout = true; 
+				}
+				else
+				{
+					b64Img.visible = tplImg.visible = false; 
+					b64Img.includeInLayout = tplImg.includeInLayout = false; 
+				}
+
 				txtName.setFocus();			
 			}
 			
-			private function onClose(event:Event):void
-			{
-				if(event is CloseEvent && CloseEvent(event).detail == ModalDialog.OK)
-            	{
-            		ContextManager.instance.templates.getItemAt(0).name = txtName.text;
-					ContextManager.instance.templates.getItemAt(0).description = txtDesc.text;
-					ContextManager.instance.templates.getItemAt(0).picturePath = StringUtil.trim(picBrowse.text);
-					ContextManager.instance.templates.getItemAt(0).key = StringUtil.trim(txtKey.text);
-            	}
-            }
-            			
 			private function removePicture():void
 			{
+				var tpl:TemplateStruct = ContextManager.instance.templates.getItemAt(0) as TemplateStruct;
+				
 				gridRemovePic.visible = false;
 				gridRemovePic.includeInLayout = false;
 					
 				picBrowse.txtInput.text = '';
 				picBrowse.text = '';
-				ContextManager.instance.templates.getItemAt(0).picturePath = '';
+				tpl.picturePath = '';
 				
-				delete ContextManager.instance.templates.getItemAt(0).xml.picture;
+				delete tpl.xml.picture;
 			}
 				
 		]]>
@@ -93,23 +117,22 @@
 		
 	<mx:VBox styleName="dlgContent" height="100%">
 		<mx:Grid>
+		
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%">
 					<mx:Label text="{LanguageManager.sentences.template_name}:"/>
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">
-					<mx:TextInput width="300" id="txtName" 
-						text="{ContextManager.instance.templates.getItemAt(0).name}"/>
+					<mx:TextInput width="300" id="txtName"/>
 				</mx:GridItem>
 			</mx:GridRow>
 			
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%">
-					<mx:Label text="{LanguageManager.sentences.template_description}:"/>
+					<mx:Label text="{LanguageManager.sentences.template_description}:"/>					
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">
-					<mx:TextArea width="300" height="90" id="txtDesc" 
-						text="{ContextManager.instance.templates.getItemAt(0).description}"/>
+					<mx:TextArea width="300" height="90" id="txtDesc"/>
 				</mx:GridItem>
 			</mx:GridRow>
 			
@@ -128,15 +151,17 @@
 						browseLabel="{LanguageManager.sentences.browse}..." 
 						browseTitle="{LanguageManager.sentences.open_file}..."
 						filterAll="{LanguageManager.sentences.all}"
-						text="{ContextManager.instance.templates.getItemAt(0).picturePath}"/>
+						text=""/>
 				</mx:GridItem>
 			</mx:GridRow>
 			
-			<mx:GridRow width="100%" height="100%" id="gridRemovePic" visible="false" includeInLayout="false">
+			<mx:GridRow width="100%" height="100%" id="gridRemovePic">
 				<mx:GridItem width="100%" height="100%">
-					<mx:Label text="{LanguageManager.sentences.template_remove_pic}:"/>
+					<!--mx:Label text="{LanguageManager.sentences.template_remove_pic}:"/-->
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">					
+					<mx:Image width="100" height="100" scaleContent="true" autoLoad="true" id="tplImg"/>
+					<controls:Base64Image width="100" height="100" scaleContent="true" autoLoad="true" id="b64Img"/>
 					<mx:Button id="btnRemovePic" label="{LanguageManager.sentences.remove}" 
 						click="removePicture()"/>
 				</mx:GridItem>
@@ -153,10 +178,10 @@
 					<mx:Label text="{LanguageManager.sentences.template_key}:"/>
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">
-					<mx:TextInput id="txtKey" 
-						text="{ContextManager.instance.templates.getItemAt(0).key}" width="300"/>
+					<mx:TextInput id="txtKey" width="300"/>
 				</mx:GridItem>
 			</mx:GridRow>
+			
 		</mx:Grid>
 	</mx:VBox>
 
