--- a/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -135,10 +135,12 @@
 				_changed = false;
 			}
 			
-			private function textAreaDataChangeHandler():void
+			private function textAreaDataChangeHandler( event : KeyboardEvent ):void
 			{
-				if( _changed )
-					return;
+				
+				
+//				if( _changed )
+//					return;
 				
 				btSave.setStyle("color", "0xCC0000");
 				btSave.setStyle("borderColor", "0xEE0000");
@@ -173,7 +175,7 @@
             <containers:TabbedTextArea id="textArea" width="100%" height="100%" 
             		 text="same Text of code" 
             		 allowTabKey="true"
-            		 keyDown=" textAreaDataChangeHandler(); "/>            	 
+            		 keyDown=" textAreaDataChangeHandler( event ); "/>            	 
             <mx:HBox>
 	           <mx:Button id="btSave" label="Save" click=" save(); " />
 	           <mx:Button label="Revert" click=" revert(); "/>
