git-svn-id: http://svn.vdombox.ru/flextools/trunk@3174 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -654,7 +654,7 @@
 					if(!ContextManager.instance.templateStruct)
 						return;
 												
-					try {
+					//try {
 						switch(event.item.@id.toString())
 						{
 							case 'resume':
@@ -688,7 +688,7 @@
 								switchDebug(false);
 								break;
 						}							
-					} catch(e:Error) {
+					/*} catch(e:Error) {
 						ProgressManager.complete();
 
 						ContextManager.instance.templateStruct.removeEventListener("generationComplete", generationComplete);					
@@ -698,7 +698,7 @@
 						ContextManager.instance.templateStruct = null;
 						switchDebug(false);
 						SuperAlert.show(e.message, "Warning!");
-					}									
+					}*/									
 				}
 				
 				if(event.item.@tag == "language")
