git-svn-id: http://svn.vdombox.ru/flextools/trunk@3185 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -30,7 +30,7 @@
 	private var massLines:Array = new Array();
 	private var masIndex:Array = new Array();
 	private var masMaxOfIndex:Array = new Array();
-	private var _curTree:Properties = new Properties();
+//	private var _curTree:Properties = new Properties();
 	private var canLine:Canvas = new Canvas();
 	private var pnFrom:Point = new Point();
 	private var blDrawLine:Boolean = false;
@@ -614,7 +614,7 @@
 		verticalScrollPolicy="auto"  horizontalScrollPolicy="off">	
 <mx:VBox  >
 <containers:ClosablePanel width="300" title="Properties">
-<treeEditor:Properties />
+<treeEditor:Properties id="_curTree" />
 </containers:ClosablePanel>
 
 	<containers:ClosablePanel width="100%" title="Menu">
