--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -215,18 +215,7 @@
 			
 			drawLine(evt.currentTarget);
 		}		
-
-
-		if (_curTree.target != null)
-		{
-			if(_curTree.target.ID != evt.currentTarget.ID)
-			{
-				dataManager.changeCurrentPage(_curTree.target.ID);
-			}
-			_curTree.target.current = false;
-		}	
 		
-		evt.currentTarget.current = true;
 		_curTree.target = TreeElement(evt.currentTarget);		
 		
 	}
@@ -289,10 +278,8 @@
 	private var massDeletedElemens:Array = new Array(); // of String
 	private function deleteTreeElement(trEvt:TreeEditorEvent):void
 	{
-		_curTree.target.current = false;
 		_curTree.target = massTreeElements[trEvt.ID];
-		_curTree.target.current = true;
-		dataManager.changeCurrentPage(_curTree.target.ID);
+//		dataManager.changeCurrentPage(_curTree.target.ID);
 		Alert.show(resourceManager.getString('Tree','do_you_want_to_delete_element'), resourceManager.getString('Tree','delete_element'), 3, this, alertClickDeleteTreeElement);
 	}
 	 
@@ -312,11 +299,6 @@
            	
 		_curTree.target = massTreeElements[randomTreeElement];
 		
-		if(_curTree.target)
-		{
-			_curTree.target.current = true;
-			dataManager.changeCurrentPage(_curTree.target.ID);
-		}
 		
 		setStartPage();
 		saveToServer();
@@ -613,9 +595,9 @@
 <mx:Canvas right="0"  height="100%" 
 		verticalScrollPolicy="auto"  horizontalScrollPolicy="off">	
 <mx:VBox  >
-<containers:ClosablePanel width="300" title="Properties">
-<treeEditor:Properties id="_curTree" />
-</containers:ClosablePanel>
+
+<treeEditor:Properties id="_curTree" width="200"/>
+
 
 	<containers:ClosablePanel width="100%" title="Menu">
 		<mx:VBox width="100%" 	verticalGap="0"  verticalAlign="0" backgroundColor="0x999999">
