git-svn-id: http://svn.vdombox.ru/flextools/trunk@3212 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -74,6 +74,7 @@
     	
 	<mx:Script>
 		<![CDATA[
+			import PowerPack.com.managers.CashManager;
 			import ExtendedAPI.com.containers.SuperWindow;
 			import mx.core.Window;
 			import ExtendedAPI.com.containers.SuperAlert;
@@ -187,6 +188,8 @@
         	    	if(!file.exists)
         	    		file.createDirectory();
         	    }
+        	    
+        	    CashManager.clear();
         	    
 				// Load application settings
 	            ContextManager.loadSettings();
